@@ -164,7 +164,13 @@ TEST(Version, OpenSslStatic)
 
 TEST(Version, JsonCpp)
 {
-  ASSERT_STREQ("0.10.5", JSONCPP_VERSION_STRING);
+#if ORTHANC_LEGACY_JSONCPP == 1
+  ASSERT_STREQ("0.10.6", JSONCPP_VERSION_STRING);
+#elif ORTHANC_LEGACY_JSONCPP == 0
+  ASSERT_STREQ("1.8.4", JSONCPP_VERSION_STRING);
+#else
+#  error Macro ORTHANC_LEGACY_JSONCPP should be set
+#endif
 }
 
 #endif
